master-file/src/main/resources/openshift/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: caj-master-file
  labels:
    app: caj-master-file
    service: caj-master-file
spec:
  selector:
    app: caj-master-file
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: http
