master-file/src/main/resources/openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: caj-master-file
spec:
  host: caj-master-file-${STUDENT_ID}.apps.penguin.rhtw.kubedev.org
  to:
    kind: Service
    name: caj-master-file
    weight: 100
  port:
    targetPort: 8080
